<resources>
    <string name="app_name">PerformanceSettings</string>
    <string name="single_barcode">Single Barcode</string>
    <string name="single_barcode_message">You can optimize the performance of single barcode reading by selecting single barcode template.</string>
    <string name="speed_first">Speed First</string>
    <string name="speed_first_message">You can simply optimize the barcode reading speed by selecting speed first template. You can still add your personalized settings to further improve the performance. </string>
    <string name="read_rate_first">Read Rate First</string>
    <string name="read_rate_first_message">You can simply optimize the barcode read rate by selecting read rate first template. You can still add your personalized settings to further improve the performance. </string>
    <string name="accuracy_first">Accuracy First</string>
    <string name="accuracy_first_message">In addition to the general accuracy settings, you can add your personalized configurations to further improve the accuracy.</string>

    <string name="text">Text:</string>
    <string name="format">Format:</string>
    <string name="results">Result(s)</string>
    <string name="Total">Total: %d</string>
    <string name="more_results">More Results</string>
    <string name="scroll_down">Scroll Down</string>
    <string name="Total_history">Total: 0</string>
    <string name="error_dialog_title">License Verification Failed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>