<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.scanner.ScannerFragment">

        <com.dynamsoft.dce.CameraView
            android:id="@+id/camera_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edge"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioGroup
                android:id="@+id/rg_modes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:checkedButton="@id/btn_single_barcode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/btn_single_barcode"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/radio_button_color"
                    android:button="@null"
                    android:gravity="center"
                    android:paddingEnd="40dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/single_barcode" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/black"
                    android:clickable="false" />

                <RadioButton
                    android:id="@+id/btn_speed_first"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/radio_button_color"
                    android:button="@null"
                    android:gravity="center"
                    android:paddingEnd="40dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/speed_first" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/black"
                    android:clickable="false" />

                <RadioButton
                    android:id="@+id/btn_read_rate_first"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/radio_button_color"
                    android:button="@null"
                    android:gravity="center"
                    android:paddingEnd="40dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/read_rate_first" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/black"
                    android:clickable="false" />

                <RadioButton
                    android:id="@+id/btn_accuracy_first"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/radio_button_color"
                    android:button="@null"
                    android:gravity="center"
                    android:paddingEnd="40dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/accuracy_first" />
            </RadioGroup>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
            app:layout_constraintEnd_toEndOf="@+id/frameLayout"
            app:layout_constraintTop_toTopOf="@+id/frameLayout"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:background="@color/transparent"
            android:orientation="vertical">

            <ImageView
                HasTipMessage="@{true}"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:contentDescription="@string/single_barcode_message"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_question" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"
                android:clickable="false" />

            <ImageView
                HasTipMessage="@{true}"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:contentDescription="@string/speed_first_message"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_question" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"
                android:clickable="false" />

            <ImageView
                HasTipMessage="@{true}"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:contentDescription="@string/read_rate_first_message"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_question" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"
                android:clickable="false" />

            <ImageView
                HasTipMessage="@{true}"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:contentDescription="@string/accuracy_first_message"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_question" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"
                android:clickable="false" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:textSize="16sp"
            android:gravity="center"
            android:scrollbars="vertical"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/btn_selectfile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="30dp"
            android:visibility="gone"
            android:background="@drawable/icon_select_image"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
